<resources>
    <string name="app_name">AP-CS-AGrasp</string>
    <string name="quadratic_equations">Quadratic Equations</string>
    <string name="daily_nutrition">Daily Nutrition</string>
    <string name="study_hours">Study Hours</string>
    <string name="base_conversion">Base Conversion</string>
    <string name="random_number_generator">Random Number Generator</string>
    <string name="calculate">Calculate</string>
    <string name="quadratic_equation_calculator">Quadratic equation calculator</string>
    <string name="extreme_school_calculator">Extreme School Calculator</string>
    <string name="ax_2_bx_c_0">Ax^2 + Bx + C = 0</string>
    <string name="a">A:</string>
    <string name="b">B:</string>
    <string name="c">C:</string>
    <string name="ideal_caloric_income_based_on_weight">Ideal caloric income based on weight</string>
</resources>